// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer it should pass in a custom prop 1`] = `
<Spacer
  className="spacer"
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="none"
  paddingTop="none"
>
  Test
</Spacer>
`;

exports[`Spacer should render a default component 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="none"
  paddingTop="none"
/>
`;

exports[`Spacer should render a spacer component with all margin props set to the given values 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="small-1"
  marginLeft="small-2"
  marginRight="medium"
  marginTop="small"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="none"
  paddingTop="none"
>
  Test
</Spacer>
`;

exports[`Spacer should render a spacer component with all padding props set to the given values 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="large+2"
  paddingLeft="large+3"
  paddingRight="large+4"
  paddingTop="large+1"
>
  Test
</Spacer>
`;

exports[`Spacer should render a spacer component with inline-block display 1`] = `
<Spacer
  isInlineBlock={true}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="none"
  paddingTop="none"
>
  Test
</Spacer>
`;

exports[`Spacer should render a spacer component with large left padding 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="none"
  paddingLeft="large"
  paddingRight="none"
  paddingTop="none"
>
  Test
</Spacer>
`;

exports[`Spacer should render a spacer component with medium bottom margin 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="medium"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="none"
  paddingTop="none"
>
  Test
</Spacer>
`;

exports[`Spacer should render a spacer component with right padding set to the given value at the given viewport size 1`] = `
<Spacer
  bps={
    Object {
      "768": Object {
        "paddingRight": "large+3",
      },
    }
  }
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="large+3"
  paddingTop="none"
>
  Test
</Spacer>
`;

exports[`Spacer should render a spacer component with small top margin 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="small"
  paddingBottom="none"
  paddingLeft="none"
  paddingRight="none"
  paddingTop="none"
>
  Test
</Spacer>
`;
